[package]
name = "upstairs-tv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1.2.0", default-features = false, features = ["full"] }
lg-webos-client = { git = "https://github.com/GT3CH1/lg-webos-client"}