[package]
name = "upstairs-tv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1.2.0", default-features = false, features = ["full"] }
lg-webos-client = { path = "../lg-webos-client" }
confy = "0.4.0"
lazy_static = "1.4.0"
serde_json = "1.0.59"
structopt = "0.3.22"
